# KnowledgeAssistant

./: .gitignore  README.md
Backend/KnowledgeAssistant/: .env  README.md  app.db  main.py  pyproject.toml  requirments.txt  run.py
Backend/KnowledgeAssistant/app/: config.py  tasks.py
Backend/KnowledgeAssistant/app/api/: auth.py  chat.py  collections.py  settings.py  sources.py
Backend/KnowledgeAssistant/app/auth/: jwt.py
Backend/KnowledgeAssistant/app/db/: session.py
Backend/KnowledgeAssistant/app/indexing/: pipeline.py
Backend/KnowledgeAssistant/app/indexing/loaders/: base_class.py  file_loader.py  git_loader.py  registry.py  url_loader.py
Backend/KnowledgeAssistant/app/models/: chat.py  chat_message.py  collection.py  source.py  user.py
Backend/KnowledgeAssistant/app/rag/: registry.py  retriever.py
Backend/KnowledgeAssistant/app/schemas/: chat.py  collection.py  settings.py  source.py  user.py
Backend/KnowledgeAssistant/app/services/: chat.py  collection.py  settings.py  source.py  user.py
Backend/KnowledgeAssistant/models/: chat.py  chat_message.py  collection.py  source.py  user.py
Backend/KnowledgeAssistant/schema/: chat.py  collection.py  settings.py  source.py  user.py
Backend/KnowledgeAssistant/storage/faiss_indexes/f1bc7b30-edba-40f7-96d2-1200b19710b6/4512e23d-74ea-4623-9574-5865abd2fcd8/: index.faiss  index.pkl
Backend/KnowledgeAssistant/tests/: test_file_loader.py  test_loader_registry.py  test_pipeline.py
Frontend/: README.md  pubspec.yaml
Frontend/lib/: app.dart  main.dart  theme.dart  (+1 more)
KnowledgeAssistant/: Knowledge Search Assistant.md  Roadmap.md
(+62 files in other folders)
