[project]
name = "knowledgeassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "gitpython>=3.1.44",
    "html5lib>=1.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-openai>=0.3.16",
    "passlib>=1.7.4",
    "pdfminer>=20191125",
    "pi-heif>=0.22.0",
    "pytest>=8.3.5",
    "python-jose>=3.4.0",
    "sqlalchemy>=2.0.40",
    "unstructured>=0.17.2",
]
